2010-12-15 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mysql-bug-type-p): Improve
	regexp.

2010-12-14 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp--table-reverse-eval-alist):
	Change defcustom:typo from 'list to 'sexp.
	(tinylisp-install-hooks): Remove obsolete defadvice from
	`debugger-mode'.

	* tiny/tinydebian.el (tinydebian-github-bug-type-p): New.
	(tinydebian-bug-bts-type-determine): Add Github support.

2010-12-12 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::keymap-reinstall-minor-mode): Change let*.
	(ti::keymap-add-minor-mode): Change let*.
	(ti::macrof-minor-mode-1): Add function call parens around
	`install-func' in near if-statement `minor-mode-alist'.
	(ti::string-verify-ends): Change let*.
	(ti::string-format-percent): Change let*.
	(ti::string-url-to-ange-ftp): Change let*.
	(ti::buffer-upcase-words-to-variable-names): Change let*.
	(ti::string-char-to-escape-char): Change let*.
	(ti::string-plain-string-to-regexp): Change let*.
	(ti::vc-rcs-delta-get-file): Change let*.
	(ti::vc-dir-p): Add darcs. Update monotone from MT to .mtn
	(ti::vc-rcs-read-val): Change let*.
	(ti::vc-rcs-look-id): Change let*.
	(ti::vc-cvs-to-cvs-dir-p): Change let*.
	(ti::vc-cvs-to-cvs-file-content): Change let*.
	(ti::vc-cvs-file-exists-p): Change let*.
	(ti::vc-cvs-entry-split-info): Change let*.
	(ti::vc-rcs-guess-buffer-version): Change let*.
	(ti::vc-rcs-buffer-version): Change let*.
	(ti::vc-rcs-str-find): Change let*.
	(ti::string-match-string-subs): Change let*.
	(ti::string-match-string-list): Change let*.
	(ti::string-case-replace): Change let*.
	(ti::string-replace-one-space): Change let*.
	(ti::buffer-find-ange-to-dired-buffer): Change let*.
	(ti::buffer-uu-area): Change let*.
	(ti::buffer-parse-line-main): Change let*.
	(ti::buffer-grep-lines): Change let*.
	(ti::buffer-read-word): Change let*.
	(ti::buffer-read-nth-word): Change let*.
	(ti::buffer-leave-nth-word): Change let*.