@@ -1,3 +1,8 @@
+2010-12-17 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinylisp.el (tinylisp--regexp-function): Use `regexp-opt'.
+	(tinylisp--regexp-variable): Use `regexp-opt'.
+
 2010-12-15 Wed  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydebian.el (tinydebian-mysql-bug-type-p): Improve
